[gd_scene load_steps=14 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/landed.png" type="Texture" id=2]
[ext_resource path="res://assets/crash.png" type="Texture" id=3]
[ext_resource path="res://SpaceBackground.shader" type="Shader" id=4]
[ext_resource path="res://assets/landing pad.png" type="Texture" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0
shader = ExtResource( 4 )

[sub_resource type="Shader" id=3]

code = "shader_type canvas_item;


void fragment() {
	COLOR = vec4(0.7);
}"

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 627.834, 10 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 41.5638, 5.53247 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 53.3609, 14.9722 )

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 551.188, 4.05951 )

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="HUDLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="HUD" type="Panel" parent="HUDLayer" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -256.0
margin_right = 256.0
margin_bottom = 57.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="FuelIndicator" type="ProgressBar" parent="HUDLayer/HUD" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = -15.5
margin_right = 168.5
margin_bottom = 15.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 100.0
exp_edit = false
rounded = false
percent_visible = true
_sections_unfolded = [ "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="PropellantName" type="Label" parent="HUDLayer/HUD" index="1"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -7.5
margin_right = 65.0
margin_bottom = 6.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Propellant"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts", "custom_styles" ]

[node name="Speedometer" type="Label" parent="HUDLayer/HUD" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 472.0
margin_top = 7.0
margin_right = 502.0
margin_bottom = 21.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SpeedName" type="Label" parent="HUDLayer/HUD" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_top = 6.0
margin_right = 474.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Vel ="
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TiltName" type="Label" parent="HUDLayer/HUD" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_top = 23.0
margin_right = 474.0
margin_bottom = 37.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Tilt ="
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Tiltometer" type="Label" parent="HUDLayer/HUD" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_top = 20.0
margin_right = 504.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AltName" type="Label" parent="HUDLayer/HUD" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 434.0
margin_top = 40.0
margin_right = 474.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Alt ="
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Altimeter" type="Label" parent="HUDLayer/HUD" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 464.0
margin_top = 40.0
margin_right = 504.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Splash" type="Control" parent="HUDLayer" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -223.5
margin_top = -134.0
margin_right = 223.5
margin_bottom = 134.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="LandedButton" type="TextureButton" parent="HUDLayer/Splash" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.5
margin_top = -100.0
margin_right = 159.5
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Textures" ]

[node name="CrashButton" type="TextureButton" parent="HUDLayer/Splash" index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -100.0
margin_right = 160.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="SpaceBg" type="CanvasLayer" parent="." index="1"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="SpaceBg" index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="BgSurface" type="Panel" parent="SpaceBg/ParallaxBackground" index="0"]

material = SubResource( 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -420.0
margin_top = -100.0
margin_right = 2510.0
margin_bottom = 1530.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Rect", "Transform" ]

[node name="Surface" type="StaticBody2D" parent="." index="2"]

position = Vector2( 512.488, 570.891 )
input_pickable = false
collision_layer = 1
collision_mask = 8
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision" ]

[node name="GroundTexture" type="Panel" parent="Surface" index="0"]

material = SubResource( 4 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -2132.0
margin_top = 13.0
margin_right = 2108.0
margin_bottom = 53.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material" ]

[node name="Ground" type="CollisionShape2D" parent="Surface" index="1"]

position = Vector2( -2.48798, 49.109 )
scale = Vector2( 1, 3.58863 )
shape = SubResource( 2 )

[node name="Pad Collider" type="CollisionShape2D" parent="Surface" index="2"]

position = Vector2( -302.488, 14.8428 )
scale = Vector2( 1.12199, 1.672 )
shape = SubResource( 5 )

[node name="LandingPad" type="Area2D" parent="." index="3"]

position = Vector2( 208.796, 542.87 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 15
collision_mask = 15
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="LandingPad" index="0"]

position = Vector2( -0.673859, 5.96973 )
scale = Vector2( 0.438638, 0.438638 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LandingPad" index="1"]

position = Vector2( 1.20399, 37.13 )
scale = Vector2( 0.835968, 1 )
shape = SubResource( 6 )

[node name="Player" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 927.155, 518.488 )
collision_mask = 7
mass = 1.0
bounce = 0.1

[node name="Ground" type="Area2D" parent="." index="5"]

position = Vector2( 516.296, 580.833 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 8
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground" index="0"]

position = Vector2( 6.43982, -2.84723 )
shape = SubResource( 7 )

[node name="PlayerTracker" type="Control" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Material", "Theme", "Visibility" ]

[node name="TextureRect" type="TextureRect" parent="PlayerTracker" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[connection signal="pressed" from="HUDLayer/Splash/LandedButton" to="." method="_on_LandedButton_pressed"]

[connection signal="pressed" from="HUDLayer/Splash/CrashButton" to="." method="_on_CrashButton_pressed"]

[connection signal="body_entered" from="LandingPad" to="Player" method="_on_LandingPad_body_entered"]

[connection signal="crashed" from="Player" to="." method="_on_Player_crashed"]

[connection signal="landed" from="Player" to="." method="_on_Player_landed"]


